--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,6 +1,6 @@
 {% load basket_tools %}
 
-<div class="toast align-items-center success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true">
+<div class="toast align-items-center success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
     <div class="d-flex">
       <div class="toast-body">Success</div>
       <div class="toast-message">{{ message }}</div>
@@ -10,7 +10,7 @@
   {% if grand_total and not on_profile_page %}
     <div class='toast-basket hide-basket{% if message.tags %} {{ message.tags }}{% endif %}'>
       <p class="py-1">Your Basket ({{ plant_count }})</p>
-      <div class="bag-notification-wrapper">
+      <div class="basket-notification-wrapper">
           {% for item in basket_items %}
               <div class="row">
                   <div class="col-3 my-1">
@@ -30,7 +30,7 @@
       <div class="row">
           <div class="col">
               <strong><p class="mt-3 mb-1">
-                  Total (inc VAT): <span class="float-right">€{{ total | calc_vat | floatformat:2 }} inc VAT</span>
+                  Total (inc VAT): <span class="float-end">€{{ total | calc_vat | floatformat:2 }} inc VAT</span>
               </p></strong>
               <a href="{% url 'view_basket' %}" class="button toast-button">
                   <span class="text-uppercase">Go To Secure Checkout</span>
