FEAT: Update basket page styles

--- a/plants/templates/plants/plant_detail.html
+++ b/plants/templates/plants/plant_detail.html
@@ -75,7 +75,7 @@
                     </span>
                     <span>Continue Shopping</span>
                 </a>
-                <button form="add-to-basket-form" type="submit" class="width-100-button button light-button plant-detail-button">Add To Basket</button>
+                <button form="add-to-basket-form" type="submit" class="width-100-button button light-button">Add To Basket</button>
             </div>
         </div>
     </div>
