--- a/basket/templates/basket/checkout_buttons.html
+++ b/basket/templates/basket/checkout_buttons.html
@@ -1,12 +1,14 @@
-<a href="{% url 'carbon_capture' %}" class="btn btn-outline-black rounded-0 btn-lg">
-    <span class="icon">
-        <i class="fas fa-chevron-left"></i>
-    </span>
-    <span class="text-uppercase">Keep Shopping</span>
-</a>
-<a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-    <span class="text-uppercase">Secure Checkout</span>
-    <span class="icon">
-        <i class="fas fa-lock"></i>
-    </span>
-</a>
+<div class="button-container">
+    <a href="{% url 'carbon_capture' %}" class="button width-100-button button-content plant-detail-button">
+        <span class="icon">
+            <i class="fas fa-chevron-left"></i>
+        </span>
+        <span class="text-uppercase">Keep Shopping</span>
+    </a>
+    <a href="{% url 'checkout' %}" class="button width-100-button button-content plant-detail-button">
+        <span class="text-uppercase">Secure Checkout</span>
+        <span class="icon">
+            <i class="fas fa-lock"></i>
+        </span>
+    </a>
+</div>
