--- a/basket/templates/basket/quantity_form.html
+++ b/basket/templates/basket/quantity_form.html
@@ -3,16 +3,16 @@
     <div class="form-group">
         <div class="input-group input-group-{{ item.item_id }}">
             <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-sm btn-black rounded-0 decrement-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
+                <button class="decrement-qty quantity-button quantity-button-left decrement-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
                     </span>
                 </button>
             </div>
-            <input class="form-control form-control-sm qty_input id_qty_{{ item.item_id }}" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
+            <input class="form-control quantity-input qty_input id_qty_{{ item.item_id }}" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
                 data-item_id="{{ item.item_id }}">
             <div class="input-group-append">
-                <button class="increment-qty btn btn-sm btn-black rounded-0 increment-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}">
+                <button class="increment-qty button quantity-button increment-qty_{{ item.item_id }}" data-item_id="{{ item.item_id }}">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
                     </span>
@@ -20,6 +20,6 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="update-link text-info"><small>Update</small></button>
+    <button type="submit" class="width-100-button button light-button float-start mt-1 mb-3"><small>Update</small></button>
 </form>
-<a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-csrf_token="{{ csrf_token }}"><small>Remove</small></a>
+<a class="button width-100-button button-content float-end text-danger remove-item mt-1 mb-3" id="remove_{{ item.item_id }}" data-csrf_token="{{ csrf_token }}"><small>Remove</small></a>
