--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -11,15 +11,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container mb-2">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Basket</h2>
-                <hr>
-            </div>
-        </div>
+<div class="content-container">
+    <div class="inner-content-container standard-inner-content-container">
+        <h1 class="content-header">Basket</h1>
         <div class="row">
             <div class="col">
                 {% if basket_items %}
@@ -32,7 +26,7 @@
                         <div class="row">
                             <div class="col">
                                 {% include "basket/checkout_buttons.html" %}
-                                <p class="text-muted mb-5">A summary of your basket contents is below</p>
+                                <p class="mb-3 mt-3">A summary of your basket contents is below</p>
                             </div>
                         </div>
                         {% for item in basket_items %}
@@ -51,16 +45,16 @@
                                     {% include "basket/quantity_form.html" %}
                                 </div>
                             </div>
-                            <div class="row"><div class="col"><hr></div></div>
+                            <hr class="mb-2">
                         {% endfor %}
                     </div>
                     <div class="table-responsive rounded d-none d-md-block">
                         <table class="table table-sm table-borderless">
-                            <thead class="text-black">
+                            <thead>
                                 <tr>
                                     <th scope="col">Plant Info</th>
                                     <th scope="col"></th>
-                                    <th scope="col">Price</th>
+                                    <th scope="col">Price (ex VAT)</th>
                                     <th scope="col">Qty</th>
                                     <th scope="col">Subtotal</th>
                                 </tr>
@@ -97,7 +91,7 @@
                         </table>
                     </div>
                 {% else %}
-                    <p class="lead mb-5">Your basket is empty.</p>
+                    <p class="lead basket-empty mb-5">Your basket is empty.</p>
                     <a href="{% url 'carbon_capture' %}" class="btn btn-outline-black rounded-0 btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
