--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -15,25 +15,18 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Checkout</h2>
-                <hr>
-            </div>
-        </div>
-
+<div class="content-container">
+    <div class="inner-content-container">
+        <h1 class="content-header">Checkout</h1>
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
-                <p class="text-muted">Order Summary ({{ plant_count }})</p>
+                <h2>Order Summary ({{ plant_count }})</h2>
                 <div class="row">
                     <div class="col-7 offset-2">
-                        <p class="mb-1 mt-0 small text-muted">Item</p>
+                        <p class="mb-1 mt-0 text-decoration-underline">Item</p>
                     </div>
                     <div class="col-3 text-right">
-                        <p class="mb-1 mt-0 small text-muted">Subtotal</p>
+                        <p class="mb-1 mt-0 text-decoration-underline">Subtotal</p>
                     </div>
                 </div>
                 {% for item in basket_items %}
@@ -49,19 +42,19 @@
                         </div>
                         <div class="col-7">
                             <p class="my-0"><strong>{{ item.plant.common_name }}</strong></p>
-                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="my-0 small">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">€{{ item.plant.price | calc_subtotal:item.quantity }}</p>
+                            <p class="my-0 small">€{{ item.plant.price | calc_subtotal:item.quantity }}</p>
                         </div>
                     </div>
                 {% endfor %}
                 <hr class="my-0">
-                <div class="row text-black text-right">
+                <div class="row text-right">
                     <div class="col-7 offset-2">
-                        <p class="my-0">Basket Total:</p>
-                        <p class="my-0">Vat:</p>
-                        <p class="my-0">Grand Total:</p>
+                        <p class="my-0 text-decoration-underline">Basket Total:</p>
+                        <p class="my-0 text-decoration-underline">Vat:</p>
+                        <p class="my-0 text-decoration-underline">Grand Total:</p>
                     </div>
                     <div class="col-3">
                         <p class="my-0">€{{ total | floatformat:2 }}</p>
@@ -71,16 +64,16 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Please fill out the form below to complete your order</p>
+                <h3>Please fill out the form below to complete your order</h3>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
                     <fieldset class="rounded px-3 mb-5">
-                        <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                        <legend class="fieldset-label small px-2 w-auto text-decoration-underline">Details</legend>
                         {{ order_form.full_name | as_crispy_field }}
                         {{ order_form.email | as_crispy_field }}
                     </fieldset>
                     <fieldset class="rounded px-3 mb-5">
-                        <legend class="fieldset-label small text-black px-2 w-auto">Billing Address</legend>
+                        <legend class="fieldset-label small px-2 w-auto text-decoration-underline">Billing Address</legend>
                         {{ order_form.phone_number | as_crispy_field }}
                         {{ order_form.street_address1 | as_crispy_field }}
                         {{ order_form.street_address2 | as_crispy_field }}
@@ -101,7 +94,7 @@
                         </div>
                     </fieldset>
                     <fieldset class="px-3">
-                        <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                        <legend class="fieldset-label small px-2 w-auto text-decoration-underline">Payment</legend>
                         <!-- A Stripe card element will go here -->
                         <div class="mb-3" id="card-element"></div>
                         <!-- Used to display form errors -->
@@ -111,36 +104,38 @@
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">                    
-                        <a href="{% url 'view_basket' %}" class="btn btn-outline-black rounded-0">
+                        <a href="{% url 'view_basket' %}" class="button width-150-button button-content float-start me-3">
                             <span class="icon">
                                 <i class="fas fa-chevron-left"></i>
                             </span>
                             <span class="font-weight-bold">Adjust Basket</span>
                         </a>
-                        <button id="submit-button" class="btn btn-black rounded-0">
+                        <button id="submit-button" class="width-150-button button light-button">
                             <span class="font-weight-bold">Complete Order</span>
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
                             </span>
                         </button>
-                        <p class="small text-danger my-0">
-                            <span class="icon">
+                        <p class="mt-1 ms-3 text-decoration-underline">
+                            <span class="icon text-danger">
                                 <i class="fas fa-exclamation-circle"></i>
                             </span>
-                            <span>Your card will be charged <strong>€{{ grand_total|floatformat:2 }}</strong></span>
+                            <span><strong>Your card will be charged €{{ grand_total|floatformat:2 }}</strong></span>
                         </p>
                     </div>
                 </form>
             </div>
         </div>
+        <div id="loading-overlay">
+            <h1 class="text-light logo-font loading-spinner">
+                <span class="icon">
+                    <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+                </span>
+            </h1>
+        </div>
     </div>
-    <div id="loading-overlay">
-        <h1 class="text-light logo-font loading-spinner">
-            <span class="icon">
-                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
-            </span>
-        </h1>
-    </div>
+</div>
+
 {% endblock %}
 
 {% block modal_style %}modal-offset{% endblock %}
