REFACTOR: Remove unnecessary style class

--- a/locations/templates/locations/location_plants_link.html
+++ b/locations/templates/locations/location_plants_link.html
@@ -19,8 +19,8 @@
                 {% csrf_token %}
             </form>
             <div class="button-container">
-                <a class="button width-100-button button-content" href="{% url 'home' %}">Home</a>
-                <button form="plant-availability-form" class="width-100-button button light-button"  type="submit" >Save associations</button>
+                <a class="button button-content" href="{% url 'home' %}">Home</a>
+                <button form="plant-availability-form" class="button light-button"  type="submit" >Save associations</button>
             </div>
         </div>
     </div>
