--- a/plants/templates/plants/add_plant_record.html
+++ b/plants/templates/plants/add_plant_record.html
@@ -18,8 +18,8 @@
                 {{ form | crispy }}
             </form>
             <div class="button-container">
-                <a class="button width-100-button button-content" href="{% url 'list_plant_records' %}">Back</a>
-                <button form="add-plant-record-form" class="width-100-button button light-button" type="submit">Create Record</button>
+                <a class="button button-content" href="{% url 'list_plant_records' %}">Back</a>
+                <button form="add-plant-record-form" class="button light-button" type="submit">Create Record</button>
             </div>
         </div>
     </div>
