--- a/plants/templates/plants/confirm_delete_plant.html
+++ b/plants/templates/plants/confirm_delete_plant.html
@@ -20,8 +20,8 @@
                 {{ form }}
             </form>
             <div class="button-container">
-                <a class="button width-100-button button-content" href="{% url 'list_plants' %}">No Thanks</a>
-                <button form="confirm-plant-delete-form" class="width-100-button button light-button" type="submit">Delete Plant</button>
+                <a class="button button-content" href="{% url 'list_plants' %}">No Thanks</a>
+                <button form="confirm-plant-delete-form" class="button light-button" type="submit">Delete Plant</button>
             </div>
         </div>
     </div>
