--- a/plants/templates/plants/confirm_delete_plant_record.html
+++ b/plants/templates/plants/confirm_delete_plant_record.html
@@ -21,8 +21,8 @@
                     {{ form }}
                 </form>
                 <div class="button-container">
-                    <a class="button width-100-button button-content" href="{% url 'list_plant_records' %}">No Thanks</a>
-                    <button form="confirm-plant-record-delete-form" class="width-100-button button light-button" type="submit">Delete Plant Record</button>
+                    <a class="button button-content" href="{% url 'list_plant_records' %}">No Thanks</a>
+                    <button form="confirm-plant-record-delete-form" class="button light-button" type="submit">Delete Plant Record</button>
                 </div>
             </div>
         </div>
