--- a/plants/templates/plants/plant_detail.html
+++ b/plants/templates/plants/plant_detail.html
@@ -69,13 +69,13 @@
             </form>
             <!-- End of quantity selector template code provided by Code Institute -->
             <div class="button-container">
-                <a class="button width-100-button button-content plant-detail-button" href="{% url 'carbon_capture' %}">
+                <a class="button button-content" href="{% url 'carbon_capture' %}">
                     <span>
                         <i class="fas fa-chevron-left"></i>
                     </span>
                     <span>Continue Shopping</span>
                 </a>
-                <button form="add-to-basket-form" type="submit" class="width-100-button button light-button">Add To Basket</button>
+                <button form="add-to-basket-form" type="submit" class="button light-button">Add To Basket</button>
             </div>
         </div>
     </div>
