--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}Wild Carbon Sign In{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
   <h2>{% trans "Sign In" %}</h2>
 
