--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -31,7 +31,7 @@
 
   {% else %}
     <p>{% blocktrans %}If you have not created an account yet, then please
-        <a href="{{ signup_url }}" class="standard-link  anchor-style">sign up</a> first.{% endblocktrans %}
+        <a href="{{ signup_url }}" class="standard-link  anchor-style fw-bold">sign up</a> first.{% endblocktrans %}
     </p>
   {% endif %}
 
