--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
     <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
@@ -21,5 +21,5 @@
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-    <a href="{% url 'account_login' %}" class="standard-link  anchor-style">Back</a>
+    <a href="{% url 'account_login' %}" class="standard-link  anchor-style">Login</a>
 {% endblock %}
