FEAT: Add useful links section to how it works page

--- a/home/templates/home/how_it_works.html
+++ b/home/templates/home/how_it_works.html
@@ -51,8 +51,8 @@
     <div class="content-container">
         <div class="inner-content-container">
             <h2 class="content-header">Wild Facts</h2>
-            <div class="text-content faq-list">
-                <ul>
+            <div class="text-content">
+                <ul class="fact-list">
                     <li class="fact-item">
                         The estimated carbon footprint of a person in Ireland is currently approximately 
                         13 tons of CO2 per year 
@@ -93,5 +93,21 @@
                 </ul>
             </div>
         </div>
-    <div>
+    </div>
+    <div class="content-container">
+        <div class="inner-content-container">
+            <h2 class="content-header">Useful Links</h2>
+            <div class="text-content useful-links">
+                <a href="https://www.carbonfootprint.com/calculator.aspx" class="useful-link-item" target="_blank" rel="external nofollow noopener" aria-label="Visit carbon footprint dot com to use their carbon calculator">
+                    Vist carbonfootprint.com to use their carbon calculator to help you reduce your carbon footprint
+                </a>
+                <a href="https://www.treecouncil.ie/carbon-footprint" class="useful-link-item" target="_blank" rel="external nofollow noopener" aria-label="Visit tree council dot i e to read more about how trees sequester carbon">
+                    Vist treecouncil.ie for more information about how trees sequester carbon and other interesting related facts 
+                </a>
+                <a href="https://rewildingeurope.com/what-is-rewilding/" class="useful-link-item" target="_blank" rel="external nofollow noopener" aria-label="Visit rewilding europe dot com for more information about rewilding">
+                    Visti rewildingeurope.com for more information about rewilding
+                </a>
+            </div>
+        </div>
+    </div>
 {% endblock%}
