FEAT: Update rel attributes for external links

--- a/home/templates/home/how_it_works.html
+++ b/home/templates/home/how_it_works.html
@@ -98,13 +98,13 @@
         <div class="inner-content-container">
             <h2 class="content-header">Useful Links</h2>
             <div class="text-content useful-links">
-                <a href="https://www.carbonfootprint.com/calculator.aspx" class="useful-link-item" target="_blank" rel="external nofollow noopener" aria-label="Visit carbon footprint dot com to use their carbon calculator">
+                <a href="https://www.carbonfootprint.com/calculator.aspx" class="useful-link-item" target="_blank" rel="external noopener" aria-label="Visit carbon footprint dot com to use their carbon calculator">
                     Vist carbonfootprint.com to use their carbon calculator to help you reduce your carbon footprint
                 </a>
-                <a href="https://www.treecouncil.ie/carbon-footprint" class="useful-link-item" target="_blank" rel="external nofollow noopener" aria-label="Visit tree council dot i e to read more about how trees sequester carbon">
+                <a href="https://www.treecouncil.ie/carbon-footprint" class="useful-link-item" target="_blank" rel="external noopener" aria-label="Visit tree council dot i e to read more about how trees sequester carbon">
                     Vist treecouncil.ie for more information about how trees sequester carbon and other interesting related facts 
                 </a>
-                <a href="https://rewildingeurope.com/what-is-rewilding/" class="useful-link-item" target="_blank" rel="external nofollow noopener" aria-label="Visit rewilding europe dot com for more information about rewilding">
+                <a href="https://rewildingeurope.com/what-is-rewilding/" class="useful-link-item" target="_blank" rel="external noopener" aria-label="Visit rewilding europe dot com for more information about rewilding">
                     Visti rewildingeurope.com for more information about rewilding
                 </a>
             </div>
