--- a/templates/base.html
+++ b/templates/base.html
@@ -157,7 +157,7 @@
                             </button>
                         </div>
                         <div class="footer-right-facebook" id="footer-right-facebook">
-                            <a href="https://www.facebook.com/wild.carbon.sequestration" class="facebook-link-container" target="_blank" rel="external nofollow noopener" aria-label="Visit Wild Carbons Facebook Business Page">
+                            <a href="https://www.facebook.com/wild.carbon.sequestration" class="facebook-link-container" target="_blank" rel="external noopener" aria-label="Visit Wild Carbons Facebook Business Page">
                                 <!-- Icon supplied by font awesome https://fontawesome.com/  -->
                                 <img src="{% static 'icons/base_facebook_brands.svg' %}"  class="social-media-icon" alt="Facebook social media icon">
                             </a>
