FEAT: Update basket button styles

--- a/basket/templates/basket/checkout_buttons.html
+++ b/basket/templates/basket/checkout_buttons.html
@@ -1,11 +1,11 @@
 <div class="button-container">
-    <a href="{% url 'carbon_capture' %}" class="button width-100-button button-content plant-detail-button">
+    <a href="{% url 'carbon_capture' %}" class="button button-content">
         <span class="icon">
             <i class="fas fa-chevron-left"></i>
         </span>
         <span class="text-uppercase">Keep Shopping</span>
     </a>
-    <a href="{% url 'checkout' %}" class="button width-100-button button-content plant-detail-button">
+    <a href="{% url 'checkout' %}" class="button button-content">
         <span class="text-uppercase">Secure Checkout</span>
         <span class="icon">
             <i class="fas fa-lock"></i>
