--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -92,7 +92,7 @@
                     </div>
                 {% else %}
                     <p class="lead basket-empty mb-5">Your basket is empty.</p>
-                    <a href="{% url 'carbon_capture' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                    <a href="{% url 'carbon_capture' %}" class="button button-content">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
