--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,84 +18,89 @@
     <div class="content-container">
         <div class="inner-content-container">
             <h1 class="content-header">My Profile</h1>
-            <div>
-                <h2  class="records-header">Default Billing Information</h2>
-                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button class="width-100-button mt-2 mb-2 button light-button">Update Information</button>
-                </form>
-            </div>
-            <div>
-                <h2 class="records-header">Order History</h2>
-                <div class="order-history table-responsive">
-                    {% for data in order_data %}
-                        <hr>
-                        <div class="associated-record-label mt-2">Order Details:</div>
-                        <table class="table order-history-table table-sm table-borderless">
-                            <thead>
-                                <tr>
-                                    <th>Order Number</th>
-                                    <th>Date</th>
-                                    <th>Items</th>
-                                    <th>Order Total</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <a href="{% url 'order_history' data.order.order_number %}"
-                                        title="{{ order.order_number }}">
-                                            {{ data.order.order_number|truncatechars:6 }}
-                                        </a>
-                                    </td>
-                                    <td>{{ data.order.date }}</td>
-                                    <td>
-                                        <ul class="list-unstyled">
-                                            {% for item in data.order.lineitems.all %}
-                                                <li class="small">
-                                                    {{ item.plant.common_name }} x{{ item.quantity }}
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </td>
-                                    <td>€{{ data.order.grand_total }}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="associated-record-label mt-2">Associated Plant Records:</div>
-                        <table class="table plant-record-table table-sm table-borderless">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>ID</th>
-                                    <th>State</th>
-                                    <th>Date state changed</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for plant_record in data.plant_records%}
-                                    <tr>
-                                        <td>
-                                            {{ plant_record.plant.common_name}}
-                                        </td>
-                                        <td>
-                                            {{ plant_record.plant_number}}
-                                        </td>
-                                        <td>
-                                            {{ plant_record.plant_state}}
-                                        </td>
-                                        <td>
-                                            {{ plant_record.date_state_changed}}
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    {% endfor %}
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <h2  class="records-header">Default Billing Information</h2>
+                    <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button class="width-100-button mt-2 mb-2 button light-button">Update Information</button>
+                    </form>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <h2 class="records-header">Order History</h2>
+                    {% if order_data %}
+                        <div class="order-history table-responsive">
+                            {% for data in order_data %}
+                                <hr>
+                                <div class="associated-record-label mt-2">Order Details:</div>
+                                <table class="table order-history-table table-sm table-borderless">
+                                    <thead>
+                                        <tr>
+                                            <th>Order Number</th>
+                                            <th>Date</th>
+                                            <th>Items</th>
+                                            <th>Order Total</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                <a href="{% url 'order_history' data.order.order_number %}"
+                                                title="{{ order.order_number }}">
+                                                    {{ data.order.order_number|truncatechars:6 }}
+                                                </a>
+                                            </td>
+                                            <td>{{ data.order.date }}</td>
+                                            <td>
+                                                <ul class="list-unstyled">
+                                                    {% for item in data.order.lineitems.all %}
+                                                        <li class="small">
+                                                            {{ item.plant.common_name }} x{{ item.quantity }}
+                                                        </li>
+                                                    {% endfor %}
+                                                </ul>
+                                            </td>
+                                            <td>€{{ data.order.grand_total }}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <div class="associated-record-label mt-2">Associated Plant Records:</div>
+                                <table class="table plant-record-table table-sm table-borderless">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>ID</th>
+                                            <th>State</th>
+                                            <th>Date state changed</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for plant_record in data.plant_records%}
+                                            <tr>
+                                                <td>
+                                                    {{ plant_record.plant.common_name}}
+                                                </td>
+                                                <td>
+                                                    {{ plant_record.plant_number}}
+                                                </td>
+                                                <td>
+                                                    {{ plant_record.plant_state}}
+                                                </td>
+                                                <td>
+                                                    {{ plant_record.date_state_changed}}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        <p>You don't currently have any previous orders</p>
+                    {% endif %}
                 </div>
             </div>
-
         </div>
     </div>
 {% endblock %}
