--- a/static/css/style.css
+++ b/static/css/style.css
@@ -495,8 +495,8 @@ main {
     height: 100%;
     width: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    padding-bottom: 10px;
 }
 
 .inner-content-container {
