STYLE: Update modal offset for error and allauth templates

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -10,3 +10,6 @@
     </div>
 </div>
 {% endblock %}
+
+{% block modal_style %}modal-offset{% endblock %}
+{% block privacy_modal_style %}modal-offset{% endblock %}
