--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -15,3 +15,6 @@
         </div>
     </div>
 {% endblock %}
+
+{% block modal_style %}modal-offset{% endblock %}
+{% block privacy_modal_style %}modal-offset{% endblock %}
